cmake_minimum_required (VERSION 2.6)

project (Algorithm)

add_executable(splitWhiteSpace ./string/splitWhiteSpace.cpp)
add_executable(search ./search/search.cpp)
add_executable(addtoLinkedListNum ./other/addtoLinkedListNum.cpp)
add_executable(royalNames ./other/royalNames.cpp)
add_executable(sort ./sort/sort.cpp)
